1998-06-13  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/changer.h (changer_clean): new function
	* server-src/changer.c (changer_clean): ditto

1998-06-13  Michael C. Povel  <mcp@ladyada.han.de>

	* changer-src/chg-scsi.c: added ejetct_tape and sleep for external
	tape devices, and changed some code to allow multiple drives to use
	their own slots. Also added support for reserverd slots.
	* changer-src/libscsi.h (get_clean_state, eject_tape): new functions 
	* changer-src/scsi-chio.c (get_clean_state, eject_tape): implemented 
	using Linux ioctls
	* changer-src/scsi-hpux.c (get_clean_state, eject_tape): do nothing, 
	until someone implements them
	* changer-src/scsi-proto.c (get_clean_state, eject_tape): new
	functions
	* docs/TAPE.CHANGERS: document new configuration file format
	* example/chg-scsi.conf: sample configuration file
	* example/Makefile.am: add chg-scsi.conf to the distribution
	* server-src/amtape.c: add support for `clean' command

1998-06-13  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/SYSTEM.NOTES: clean-up

	* docs/FAQ: new file
	* docs/SUNOS4.BUG: removed
	* Makefile.am: remove docs/SUNOS4.BUG and add docs/FAQ
	
	* example/amanda.conf.in (bumpmult): fixed equation for threshold
	* man/amanda.8.in (bumpsize): fix threshold example.
	problem reported by Brian McEntire <brianm@fsg1.nws.noaa.gov>

	* server-src/logfile.c (open_log): open log file with mode 0600.

	* server-src/amdump.sh.in: refuse to run if either amdump or log
	exist in logdir.
	* server-src/amflush.c (main): refuse to run if log exists.
	* server-src/amcheck.c (start_server_check): do not perform tape
 	testing if amdump and/or log exist in logdir.

1998-06-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* restore-src/amrestore.c (restore): fixed -p flag (and amrecover)
	should not dup2( A, B ); aclose(A) when A == B

1998-06-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendsize.c (getsize_dump): use killpgrp